Issue #18646: Fixed border and spacing issue with comment boxes.

--- a/source/less/screen.less
+++ b/source/less/screen.less
@@ -490,18 +490,16 @@ body {
     background: @white;
     max-width: 320px;
   }
-
   .xv-comment-box-label {
-    padding: 4px;
+    padding: 5px;
     font-size: small;
     font-weight: bold;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
-  
   .xv-comment-box-textblock {
-    padding: 12px;
+    padding: 5px;
     font-size: small;
     overflow: hidden;
     &.disabled {
@@ -797,11 +795,11 @@ body {
 }
 
 .xv-textarea-input {
-  width: 95%;
+  width: 90%;
   height: 100%;
   min-height: 100px;
   margin: 6px;
-	border: #ddd 4px solid;
+	border: #ddd 2px solid;
 }
 
 .xv-documents-picker-label {
